io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/illegalstaticfieldupdate/C.java
package io.hotmoka.tests.errors.illegalstaticfieldupdate;

public class C {

	public static int i;

	public C() {
		i++;
	}
}
